@@ -1,3 +1,8 @@
+2008-08-01  Gautier Portet  <kassoulet gmail com>
+	* src/soundconverter.py: Fix slash in tag. No more creating unwanted
+	folders. This is just a fast hack, slash is just replaced by dash.
+	(fix #14286)
+
 2008-07-30  Gautier Portet  <kassoulet gmail com>
 
 	* src/soundconverter.py: Add AAC encoding support as it seems to be
